crates/compiler/test_syntax/tests/snapshots/pass/when_with_function_application.expr.formatted.roc
when x is
    1 ->
        Num.neg
            2

    _ -> 4