crates/compiler/test_syntax/tests/snapshots/fail/when_outdented_branch.expr.roc
when 4 is
    5 -> 2
 2 -> 2
